# greedy-search

./: README.md  main.py  pyproject.toml
src/: greedy_search.py  plot.py
test/: test_greedy_search.py
