[project]
name = "greedy-search"
version = "0.1.0"
description = "set covering problem"
authors = [
    {name = "dfleta", email = "gelpiorama@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
]

[dependency-groups]
lint = [
    "ruff>=0.9.9",
]
